# DDCController

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DDCController/: main.py
DDCController/Cpp/: main.cpp
DDCController/Cpp/tray/: tray.cpp  tray.h
DDCController/Python/: main.py
display_communicator/: display_communicator.cpp  display_communicator.h
monitor_control/DEBIAN/: control
monitor_control/usr/share/applications/: monitor_control.desktop
monitorcontrol/DEBIAN/: control
monitorcontrol/usr/share/bash-completion/completions/: monitorcontrol
tray/: tray.cpp  tray.h
